--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/node": "^16.18.10",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@unform/core": "^2.1.6",
+    "@unform/web": "^2.1.6",
     "axios": "^1.2.2",
     "classnames": "^2.3.2",
     "prop-types": "^15.8.1",
