--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
     "axios": "^1.2.2",
+    "axios-mock-adapter": "^1.21.2",
     "classnames": "^2.3.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
