--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
-		"@types/jest": "^29.2.0",
 		"@types/node": "^16.18.10",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.10",
@@ -27,6 +26,7 @@
 		"react-router-dom": "^6.6.1",
 		"react-scripts": "5.0.1",
 		"styled-components": "^5.3.6",
+		"ts-jest": "^29.0.5",
 		"typescript": "^4.9.4",
 		"uuid": "^9.0.0",
 		"web-vitals": "^2.1.4",
@@ -53,17 +53,21 @@
 		]
 	},
 	"devDependencies": {
+		"@babel/preset-typescript": "^7.18.6",
+		"@types/jest": "^29.2.5",
 		"@types/styled-components": "^5.1.26",
 		"@types/uuid": "^9.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.47.0",
 		"@typescript-eslint/parser": "^5.47.0",
 		"axios-mock-adapter": "^1.21.2",
+		"babel-plugin-module-resolver": "^5.0.0",
 		"eslint": "^8.30.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-jsx-a11y": "^6.6.1",
 		"eslint-plugin-react": "^7.31.11",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"jest": "^29.3.1",
 		"jest-mock-axios": "^4.7.0-beta3",
 		"prettier": "^2.8.1"
 	}
