feat(auth): logout user if its not authenticated in backend

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,7 +38,8 @@
 		"object-curly-spacing": [
 			"error",
 			"always"
-		]
+		],
+		"@typescript-eslint/no-explicit-any": "off"
 	},
 	"ignorePatterns": [
 		"/assets"
