--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@unform/web": "^2.1.6",
 		"axios": "^1.2.2",
 		"classnames": "^2.3.2",
+		"dotenv": "^16.0.3",
 		"notistack": "alpha",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
