--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.6.1",
 		"react-scripts": "5.0.1",
+		"recharts": "^2.4.3",
 		"styled-components": "^5.3.6",
 		"ts-jest": "^29.0.5",
 		"typescript": "^4.9.4",
