--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
 		"prettier"
 	],
 	"rules": {
+		"no-use-before-define": "off",
 		"no-unexpected-multiline": "off",
 		"jsx-a11y/anchor-is-valid": "off",
 		"no-param-reassign": [
