--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.6.1",
 		"react-scripts": "5.0.1",
+		"react-swipeable-views": "^0.14.0",
 		"recharts": "^2.4.3",
 		"styled-components": "^5.3.6",
 		"ts-jest": "^29.0.5",
@@ -57,6 +58,7 @@
 	"devDependencies": {
 		"@babel/preset-typescript": "^7.18.6",
 		"@types/jest": "^29.2.5",
+		"@types/react-swipeable-views": "^0.13.1",
 		"@types/styled-components": "^5.1.26",
 		"@types/uuid": "^9.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.49.0",
