--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
 		"test": "react-scripts test --coverage",
 		"eject": "react-scripts eject",
 		"format": "prettier --write \"src/**/*.{ts,tsx}\"",
-		"lint": "eslint \"src/**/*.{ts,tsx}\" --quiet"
+		"lint": "eslint \"src/**/*.{ts,tsx}\" --quiet",
+		"prebuild": "npm install --force"
 	},
 	"browserslist": {
 		"production": [
